<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_double">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#eee" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_double"
            android:layout_marginVertical="@dimen/space_standard"
            tools:text="Golchin" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/space_double"
            android:layout_marginBottom="@dimen/space_standard"
            tools:text="As millions of people create videos every day on YouTube, finding what you love to watch, in your own language, could be an issue. What if there was an app which offered curated Persian videos for you. Here it comes Golchin." />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/linksGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="@dimen/space_standard">

            <com.google.android.material.chip.Chip
                android:id="@+id/googlePlay"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/half_space"
                android:text="@string/google_play" />

            <com.google.android.material.chip.Chip
                android:id="@+id/appStore"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/half_space"
                android:text="@string/app_store" />

            <com.google.android.material.chip.Chip
                android:id="@+id/macAppStore"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/half_space"
                android:text="@string/mac_app_store" />

            <com.google.android.material.chip.Chip
                android:id="@+id/website"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/half_space"
                android:text="@string/website" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

</androidx.cardview.widget.CardView>